# statusCheck

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  demo.html  docker-compose.yml  pyproject.toml
app/: __init__.py  admin.py  config.py  main.py
app/clients/: sub2api.py
app/services/: dashboard.py
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: AdminApp.tsx  App.tsx  admin.css  main.tsx  styles.css  types.ts
frontend/src/components/: Panel.tsx  StatCard.tsx  StatusPill.tsx  ThemeToggle.tsx  panel.css  stat-card.css  status-pill.css
frontend/src/lib/: api.ts  format.ts  theme.ts
