[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "status-check"
version = "0.1.0"
description = "Sub2API model health status page backend with cached probes and group-scoped monitoring"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.1",
  "httpx>=0.28.1",
  "pydantic-settings>=2.10.1",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "ruff>=0.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
